[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprite/RYU.png" type="Texture" id=3]
[ext_resource path="res://ui/HealthUI.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 2, 437, 66, 94 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitbox/collisionbox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hurtbox/collisionbox2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("hurtbox/collisionbox2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.5, -1.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("hitbox/collisionbox:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -0.5 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("hurtbox:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 30, -37 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "block"
length = 0.2
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 3, 4658, 65, 92 ), Rect2( 70, 4659, 68, 91 ), Rect2( 144, 4658, 65, 92 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox/collisionbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.183334 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitbox/collisionbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -2.5, -0.5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.5
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.183333, 0.266667, 0.366667, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 2, 437, 66, 94 ), Rect2( 71, 438, 66, 93 ), Rect2( 140, 437, 66, 94 ), Rect2( 209, 435, 66, 96 ), Rect2( 279, 434, 64, 97 ), Rect2( 347, 435, 66, 96 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox/collisionbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hurtbox/collisionbox2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitbox/collisionbox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -0.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "kick"
length = 0.500001
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.283333, 0.366667, 0.466667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 867, 2559, 65, 94 ), Rect2( 948, 2562, 63, 90 ), Rect2( 1019, 2558, 86, 94 ), Rect2( 1118, 2555, 109, 97 ), Rect2( 1237, 2564, 90, 88 ), Rect2( 1345, 2560, 54, 92 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hurtbox/collisionbox2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.283334, 0.366667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hurtbox/collisionbox2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.283334 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 3.5, -1.5 ), Vector2( 3.5, -3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitbox/collisionbox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hitbox/collisionbox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, -0.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("hurtbox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.283334 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 30, -37 ), Vector2( 43, -36 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "knockback"
length = 0.333334
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.283333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 1, 4859, 69, 92 ), Rect2( 71, 4857, 70, 94 ), Rect2( 142, 4858, 74, 93 ), Rect2( 220, 4857, 70, 94 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox/collisionbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "punch"
length = 0.333333
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 3, 1319, 74, 94 ), Rect2( 80, 1318, 102, 95 ), Rect2( 185, 1319, 74, 94 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 23, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hurtbox/collisionbox2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.166667, 0.333334 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hurtbox/collisionbox2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.166667 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 3.5, -2.34 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hitbox/collisionbox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("hitbox/collisionbox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, -0.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("hurtbox:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.166667 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 60, -28 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 45.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 11.5, 9 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20.5, 42.5 )

[node name="Player" type="KinematicBody2D" groups=["network_sync"]]
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 2, 437, 66, 94 )

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/block = SubResource( 6 )
anims/idle = SubResource( 2 )
anims/kick = SubResource( 3 )
anims/knockback = SubResource( 4 )
anims/punch = SubResource( 5 )
script = ExtResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="collisionbox" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 1, -0.5 )
shape = SubResource( 7 )
disabled = true

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2( 30, -37 )
collision_layer = 8
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="collisionbox2" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 3.5, -1.5 )
shape = SubResource( 8 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 15
position = Vector2( -0.5, 0.5 )
shape = SubResource( 9 )

[node name="HealthUI" parent="." instance=ExtResource( 4 )]
margin_left = -30.0
margin_top = -59.0
margin_right = 30.0
margin_bottom = -48.0

[connection signal="animation_finished" from="NetworkAnimationPlayer" to="." method="_on_NetworkAnimationPlayer_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
